@@ -3,23 +3,43 @@ package org.example.todolist.config;
 import lombok.Getter;
 import org.example.todolist.domain.Member;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.oauth2.core.oidc.OidcIdToken;
+import org.springframework.security.oauth2.core.oidc.OidcUserInfo;
+import org.springframework.security.oauth2.core.oidc.user.OidcUser;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
+import java.util.Map;
 
 @Getter
-public class CustomUserDetails implements UserDetails {
+public class CustomUserDetails implements OidcUser, UserDetails {
 
     private final Member member;
+    private Map<String, Object> attributes;
+    private OidcUserInfo userInfo;
+    private OidcIdToken idToken;
 
     public CustomUserDetails(Member member) {
         this.member = member;
     }
 
+    public CustomUserDetails(Member member, OidcUser oidcUser) {
+        this.member = member;
+        this.attributes = oidcUser.getAttributes();
+        this.userInfo = oidcUser.getUserInfo();
+        this.idToken = oidcUser.getIdToken();
+    }
+
+    @Override
+    public Map<String, Object> getAttributes() {
+        return attributes != null ? attributes : Collections.emptyMap();
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
@@ -30,6 +50,46 @@ public class CustomUserDetails implements UserDetails {
     @Override
     public String getUsername() {
         return member.getLoginId();
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
+
+    @Override
+    public String getName() {
+        return member.getName();
+    }
+
+    @Override
+    public Map<String, Object> getClaims() {
+        return getAttributes();
+    }
+
+    @Override
+    public OidcUserInfo getUserInfo() {
+        return userInfo;
+    }
+
+    @Override
+    public OidcIdToken getIdToken() {
+        return idToken;
     }
 
 }
